--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "A haidar albaqir <ahmadhdr.22@gmail.com> (http://ahmadhdr.com/)",
